[build-system]
build-backend = "hatchling.build"

# =============================================================================
# /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/
# =============================================================================
#  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\  /\
# /  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \/  \
# =============================================================================
# \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
# =============================================================================
requires = [ "hatchling" ]

[project]
name = "dgpylibs"
version = "0.0.7"
description = "Dynamic Graphics Python libraries"
keywords = [ "dgi", "dgpy", "python3", "typed" ]
authors = [ { name = "jessekrubin", email = "jesse@dgi.com" } ]
requires-python = ">=3.9,<4.0"

classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "aiopen",
  "asyncify",
  "fmts",
  "funkify",
  "h5",
  "jsonbourne",
  "lager",
  "listless",
  "requires",
  "shellfish",
  "xtyping",
]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/dgpylibs" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool]

[tool.uv.sources]
asyncify = { workspace = true }
aiopen = { workspace = true }
fmts = { workspace = true }
funkify = { workspace = true }
h5 = { workspace = true }
jsonbourne = { workspace = true }
lager = { workspace = true }
listless = { workspace = true }
requires = { workspace = true }
shellfish = { workspace = true }
xtyping = { workspace = true }
