[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.25,<0.10.0"]

[project]
name = "dgpylibs"
version = "0.1.0"
description = "Dynamic Graphics Python libraries"
keywords = [ "dgi", "dgpy", "python3", "typed" ]
authors = [ { name = "jessekrubin", email = "jesse@dgi.com" } ]
requires-python = ">=3.11,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "aiopen",
  "asyncify",
  "fmts",
  "funkify",
  "h5",
  "jsonbourne",
  "lager",
  "listless",
  "requires",
  "shellfish",
  "xtyping",
]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/dgpylibs" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
]

[tool.uv.sources]
asyncify = { workspace = true }
aiopen = { workspace = true }
fmts = { workspace = true }
funkify = { workspace = true }
h5 = { workspace = true }
jsonbourne = { workspace = true }
lager = { workspace = true }
listless = { workspace = true }
requires = { workspace = true }
shellfish = { workspace = true }
xtyping = { workspace = true }

[tool.ruff]
extend = "../../ruff.toml"

[tool]
