[project]
name = "dgpytest"
version = "0.0.4"
description = "dgpytest = dgpy + pytest"
authors = [{ name = "jesse", email = "jesse@dgi.com" }]
readme = "README.md"
keywords = ["pytest", "dgpy", "typed", "plugin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = ["pytest>=7.2.2", "pytest-asyncio>=0.21,<0.24"]
requires-python = ">=3.8.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.dependencies]
python = ">=3.8.1"
pytest = ">=7.2.2"
pytest-asyncio = ">=0.21,<0.25"

[tool.poetry.plugins.pytest11]
dgpytest = "dgpytest.plugin"

[project.entry-points.pytest11]
dgpytest = "dgpytest.plugin"

[tool]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
filterwarnings = [
  "error",
  'ignore:"@coroutine" decorator is deprecated since Python 3\.8, use "async def" instead:DeprecationWarning',
  "ignore::RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
]

[tool.coverage.run]
branch = true
source = ['dgpytest']
omit = [
  '_meta.py',
]

[tool.coverage.report]
precision = 2
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  '@overload',
  # Re-enable the standard pragma (with extra strictness)
  '# pragma: no cover\b',
  # Code for static type checkers
  'if TYPE_CHECKING:',
  # Scripts
  'if __name__ == .__main__.:',
  'if 0:',
  'if sys.version_info < (3, 7):',
  'if sys.version_info >= (3, 8):',
  'pragma: no cover',
  'pragma: nocov',
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dgpytest"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

