[project]
name = "fmts"
version = "0.2.0"
description = "str transformation utils"
authors = [{ name = "jesse", email = "jesse@dgi.com" }]
readme = "README.md"
keywords = ["str", "utils", "dgpy", "vanilla", "typed"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []
requires-python = ">=3.8,<4.0"

[project.urls]
Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/fmts"
Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"


[tool.coverage.run]
source = ['fmts']
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
show_missing = true
precision = 2
omit = []
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]

[tool.coverage.paths]
source = ['fmts/']


[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fmts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
