[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.8,<0.9" ]

[project]
name = "fmts"
version = "0.4.1"
description = "str transformation utils"
readme = "README.md"
keywords = [ "dgpy", "str", "typed", "utils", "vanilla" ]
authors = [
  { name = "jesse", email = "jessekrubin@gmail.com" },
]
requires-python = ">=3.11,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [  ]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/fmts"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/fmts" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../ruff.toml"

[tool.coverage.run]
source = [ 'fmts' ]
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
show_missing = true
precision = 2
omit = [  ]
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]

[tool.coverage.paths]
source = [ 'fmts/' ]
