[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "h5"
version = "0.9.3"
description = "H5py utils"
readme = "README.md"
keywords = ["h5", "h5py", "hdf5", "numpy"]
authors = [{ name = "jesse", email = "jesse@dgi.com" }]
requires-python = ">=3.8.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "h5py>=3.7",
  "numpy>=1.23.2",
  "ry>=0.0.9",
  "typing-extensions>=4.5,<5",
]
optional-dependencies.cli = [
  "click>=8.1.7",
  "globsters>=0.0.3",
  "rich>=13.7.1",
  "ry>=0.0.9",
]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/h5"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"
scripts.h5 = "h5.cli:main"

[tool.poetry.dependencies]
python = ">=3.8.0"
h5py = ">=3.7.0"
numpy = ">=1.23.2"
typing-extensions = "^4.5.0"
# click 8.1.4 breaks mypy
click = { version = ">=8.1.3,!=8.1.4", optional = true }
rich = { version = "^13.3.3", optional = true }
globsters = { version = ">=0.0.2,<0.0.4", optional = true }

[tool.poetry.extras]
cli = ["click", "rich", "globsters"]

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

# coverage config
# [tool.coverage.run]
# omit = ["*/tests/*", "*/__init__.py", "h5/__main__.py",]
[tool.poetry.scripts]
h5 = "h5.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/h5"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"
target-version = "py38"

[tool.pytest.ini_options]
markers = ["version"]
# add cov to pytest args
addopts = ["--cov=h5", "--cov-fail-under=75"]

[tool.coverage.run]
source = ['h5']
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["*/legacy.py"]
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'class BaseAsync:',
  'if 0:',
  'if False:',
]

[tool.coverage.paths]
source = ['src/h5']

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]
