[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "h5"
version = "0.11.0"
description = "H5py utils"
readme = "README.md"
keywords = [ "h5", "h5py", "hdf5", "numpy" ]
authors = [ { name = "jesse", email = "jesse@dgi.com" } ]
requires-python = ">=3.9.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1.7",
  "h5py>=3.7",
  "numpy>=1.23.2",
  "rich>=13.7.1",
  "ry>=0.0.37",
  "typing-extensions>=4.5,<5",
]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/h5"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"
scripts.h5 = "h5.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/h5" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"
target-version = "py38"

[tool.pytest.ini_options]
markers = [ "version" ]
# add cov to pytest args
addopts = [ "--cov=h5", "--cov-fail-under=75" ]

[tool.coverage.run]
source = [ 'h5' ]
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
show_missing = true
precision = 2
omit = [ "*/legacy.py" ]
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'class BaseAsync:',
  'if 0:',
  'if False:',
]

[tool.coverage.paths]
source = [ 'src/h5' ]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
]
