[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.8,<0.9" ]

[project]
name = "h5"
version = "0.12.1"
description = "H5py utils"
readme = "README.md"
keywords = [ "h5", "h5py", "hdf5", "numpy" ]
authors = [ { name = "jesse", email = "jesse@dgi.com" } ]
requires-python = ">=3.11,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "h5py>=3.7",
  "numpy>=1.23.2",
]
optional-dependencies.cli = [
  "click>=8.2.1",
  "rich>=14.1",
  "ry>=0.0.57",
]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/h5"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"
scripts.h5 = "h5.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4",
  "pytest-cov>=6.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/h5" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../ruff.toml"

[tool.pytest.ini_options]
markers = [ "version" ]
# add cov to pytest args
addopts = [ "--cov=h5", "--cov-fail-under=75" ]

[tool.coverage.run]
source = [ 'h5' ]
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
show_missing = true
precision = 2
omit = [ "*/legacy.py" ]
exclude_lines = [
  'pragma: no cover',
  'pragma: nocov',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'class BaseAsync:',
  'if 0:',
  'if False:',
  'if __name__ == "__main__":',
]

[tool.coverage.paths]
source = [ 'src/h5' ]
