[project]
name = "jsonbourne"
version = "0.29.0"
description = "EZPZ JSON"
authors = [{name = "jesse",email = "jesse@dgi.com"}]
readme = "README.md"
keywords = ["dgpy", "pydantic", "json", "orjson", "rapidjson"]
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Typing :: Typed"]
dependencies = ["xtyping>=0.5.0", "jsonc2json>=0.0.2,<0.0.5"]
requires-python = ">=3.8,<4.0"

[project.urls]
Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/jsonbourne"
Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[project.optional-dependencies]
httpx = [
    "httpx>=0.27.0",
]
orjson = [
    "orjson>=3.10.7",
]
test = [
    "pytest>=8.3.2",
]
pydantic = [
    "pydantic>=2.8.2",
]

[tool]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--doctest-ignore-import-errors",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
filterwarnings = [
  "error",
  'ignore:"@coroutine" decorator is deprecated since Python 3\.8, use "async def" instead:DeprecationWarning',
  "ignore::RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
  "skip: skip test",
  "anyio: anyio tests",
  "aio: asyncio tests",
  "basic: basic tests",
  "version",
  "orjson: orjson tests",
  "rapidjson: rapidjson tests",
  "pydantic: pydantic tests",
  "attrs: attrs tests",
  "optdeps: optional dependencies",
  "jsonlibs: jsonlibs tests",
]
testpaths = [
  "jsonbourne",
  "tests",
]


[tool.coverage.run]
source = ['jsonbourne']
branch = true
context = '${CONTEXT}'
omit = ["**/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]


[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jsonbourne", "src/JSON.py", "src/david_webb.py"]

[tool.uv]
dev-dependencies = [
    "orjson>=3.10.7",
    "python-rapidjson>=1.20",
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
