[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "jsonbourne"
version = "0.31.0"
description = "EZPZ JSON"
readme = "README.md"
keywords = [ "dgpy", "json", "orjson", "pydantic", "rapidjson" ]
authors = [ { name = "jesse", email = "jesse@dgi.com" } ]
requires-python = ">=3.9,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [ "xtyping>=0.5" ]
optional-dependencies.httpx = [
  "httpx>=0.27",
]
optional-dependencies.orjson = [
  "orjson>=3.10.7",
]
optional-dependencies.pydantic = [
  "pydantic>=2.8.2",
]
optional-dependencies.test = [
  "pytest>=8.3.2",
]
urls.Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/jsonbourne"
urls.Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[dependency-groups]
dev = [
  "attrs>=25.3",
  "httpx>=0.28.1",
  "orjson>=3.10.18",
  "pydantic>=2.11.5",
  "python-rapidjson>=1.20",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/jsonbourne", "src/JSON.py", "src/david_webb.py" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--doctest-ignore-import-errors",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
filterwarnings = [

]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
  "skip: skip test",
  "anyio: anyio tests",
  "aio: asyncio tests",
  "basic: basic tests",
  "version",
  "orjson: orjson tests",
  "rapidjson: rapidjson tests",
  "pydantic: pydantic tests",
  "attrs: attrs tests",
  "optdeps: optional dependencies",
  "jsonlibs: jsonlibs tests",
]
testpaths = [
  "jsonbourne",
  "tests",
]

[tool.coverage.run]
source = [ 'jsonbourne' ]
branch = true
context = '${CONTEXT}'
omit = [ "**/__main__.py" ]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]
