[project]
name = "lager"
version = "0.18.2"
description = "EZ-PZ logging based on loguru"
authors = [{name = "jesse rubin",email = "jesse@dgi.com"}]
readme = "README.md"
keywords = ["logging", "dgpy", "dgi", "loguru", "beer"]
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Typing :: Typed"]
dependencies = ["loguru>=0.7.0", "typing-extensions>=4.5.0,<5.0.0"]
requires-python = ">=3.8,<4.0"

[tool.poetry.dependencies]
python = "^3.8"
loguru = ">=0.7.0"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.coverage.run]
source = ['lager']
branch = true
context = '${CONTEXT}'
omit = ["**/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]


[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true
dev-dependencies = ["typing-extensions>=4.5.0,<5.0.0"]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
