[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "lager"
version = "0.19.0"
description = "EZ-PZ logging based on loguru"
readme = "README.md"
keywords = [ "beer", "dgi", "dgpy", "logging", "loguru" ]
authors = [ { name = "jesse rubin", email = "jesse@dgi.com" } ]
requires-python = ">=3.9,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [ "loguru>=0.7", "typing-extensions>=4.5,<5" ]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/lager" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.coverage.run]
source = [ 'lager' ]
branch = true
context = '${CONTEXT}'
omit = [ "**/__main__.py" ]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: nocov',
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
]

[tool]
dev-dependencies = [ "typing-extensions>=4.5.0,<5.0.0" ]
