[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "listless"
version = "0.3.0"
description = "generator utils; aka listless"
readme = "README.md"
keywords = [
  "dgpy",
  "generators",
  "itertools",
  "typed",
]

license = { text = "MIT" }
authors = [
  { name = "jesse", email = "jesse@dgi.com" },
]
requires-python = ">=3.9,<4.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [  ]
urls.homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/listless"
urls.repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[tool.hatch.build.targets.wheel]
packages = [ "src/listless" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "timeout",
]

[tool.coverage.run]
branch = true
source = [ 'listless' ]
omit = [
  '_meta.py',
]

[tool.coverage.report]
precision = 2
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  '@overload',
  # Re-enable the standard pragma (with extra strictness)
  '# pragma: no cover\b',
  # Code for static type checkers
  'if TYPE_CHECKING:',
  # Scripts
  'if __name__ == .__main__.:',
  'if 0:',
  'if sys.version_info < (3, 7):',
  'if sys.version_info >= (3, 8):',
  'pragma: no cover',
  'pragma: nocov',
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
]
